# clipflow

./: .gitignore  README.md  pyproject.toml
src/clipflow/: __init__.py  audiosync.py  config.py  ffmpeg.py  interactive.py  main.py  matching.py  models.py  probe.py  progress.py  sync.py
tests/: test_audiosync.py  test_ffmpeg.py  test_matching.py  test_probe.py  test_progress.py  test_sync.py
